--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "firebase": "^10.8.0",
+    "firebase": "^10.11.0",
     "openai": "^4.32.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -42,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@reduxjs/toolkit": "^2.2.1",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1"
